# src/types/responses/informplus/dataSet/dataSetCollectionIdentifier.response.ts
@@ -1,0 +1,5 @@
+import { DatasetCollection } from './dataSetCollection.response'
+
+export interface IDataSetCollectionIdentifierGetResponse {
+  datasetCollection: DatasetCollection
+}
