# src/types/responses/informplus/dataSet/dataSetCollectionVerbose.response.ts
@@ -1,0 +1,5 @@
+import { DatasetCollection } from './dataSetCollection.response'
+
+export interface IDataSetCollectionVerboseGetResponse {
+  'datasetCollection-array': DatasetCollection[]
+}
